--- a/app/views/food_pickups/show.html.erb
+++ b/app/views/food_pickups/show.html.erb
@@ -2,8 +2,8 @@
 
 
 <div class="field">
-  <%= label_tag :picture %><br />
-  <%= text_field_tag :picture, @food_pickup.picture %>
+  <%= image_tag @food_pickup.picture %>
+  <%= file_field_tag :picture, value: @food_pickup.picture %>
 </div>
 
 <div class="field">
