--- a/app/assets/stylesheets/_external.css.scss
+++ b/app/assets/stylesheets/_external.css.scss
@@ -1,2 +1,46 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+div.well{
+  height: 250px;
+}
+
+.Absolute-Center {
+  margin: auto;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.Absolute-Center.is-Responsive {
+  width: 50%;
+  height: 50%;
+  min-width: 200px;
+  max-width: 400px;
+  padding: 40px;
+}
+
+.logo-container{
+  margin: auto;
+  margin-bottom: 10px;
+  width:200px;
+  height:30px;
+}
+
+table.scroll {
+    width: 300%; /* Optional */
+}
+
+table.scroll tbody,
+table.scroll thead { display: auto; }
+
+thead tr th {
+    height: 30px;
+    line-height: 60px;
+    /*text-align: left;*/
+}
+
+table.scroll tbody {
+    height: 300px;
+    overflow-y: auto;
+    overflow-x: auto;
+}
