--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -1,6 +1,7 @@
-<div id="page-wrapper" ng-controller="profileCtrl">
+<div ng-controller="profileCtrl">
     <div class="row">
         <div class="col-lg-12">
+          <img src="http://www.rescuingleftovercuisine.org/assets/RLC_LOGO-900fcd5d7d719b63e43d29ac23775f74f17100194e2690e17833a091b016da85.png" alt="Rescuing Leftover Cuisine Logo">
             <h1 class="page-header">Welcome Rescuing Leftover Cuisine Admin</h1>
         </div>
         <!-- /.col-lg-12 -->
@@ -65,7 +66,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="table-responsive" >
-                                <table class="table table-bordered table-hover table-striped">
+                                <table class="table table-responsive table-bordered table-hover table-striped scroll">
                                     <thead>
                                       <tr>
                                           <th>Profile Submitted On</th>
