--- a/app/views/food_pickups/edit.html.erb
+++ b/app/views/food_pickups/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag("/pickup/#{@food_pickup.id}/edit", method: "patch") do %>
+<%= form_tag(@form_path, method: "patch") do %>
 <div>
   <img src="<%= @food_pickup.picture %>" alt="Food Picture" style="width=302px;height:228px">
 </div>
@@ -47,17 +47,21 @@
   <%= label_tag "You will be charged #{number_to_currency(current_donor.charge)}" %>
 </div>
 
-<div>
-  <%= label_tag :charge %><br />
-  <%= number_field_tag :charge, @food_pickup.charge.to_i, :class => 'text_field', :step => 'any' %>
-</div>
+  <% if current_donor.admin? %>
+   <div>
+     <%= label_tag :charge %><br />
+     <%= number_field_tag :charge, @food_pickup.donor.charge.to_i, :class => 'text_field', :step => 'any' %>
+   </div>
 
-<div>
-<%= label_tag "Approve Pickup:" %><br />
-<%= select_tag :approved, options_for_select([["Approved", true], ["Unapproved", false]], selected: @food_pickup.approved) %>
-</div>
+   <div>
+     <%= label_tag "Approve Pickup:" %><br />
+     <%= select_tag :approved, options_for_select([["Approved", true], ["Unapproved", false]], selected: @food_pickup.approved) %>
+   </div>
 
-<%= submit_tag "Submit", class: "btn btn-primary" %>
+    <%= submit_tag "Approve", class: "btn btn-primary" %>
+  <% else %>
+    <%= submit_tag "Update", class: "btn btn-primary" %>
+  <% end %>
 
 <% end %>
 
