fixed link to's, angularized counts, took out margins in profiles pg

--- a/app/views/food_pickups/edit.html.erb
+++ b/app/views/food_pickups/edit.html.erb
@@ -67,5 +67,5 @@
 <% end %>
 
 <div>
-  <h3><%= link_to "<< Back To Dashboard", :back %></h3>
+  <h3><%= link_to "Back To Dashboard", :back %></h3>
 </div>
