--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -15,18 +15,11 @@
                             <i class="fa fa-tasks fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-right">
-                            <div class="huge"> <%= @donor.count %> </div>
+                            <div class="huge">{{donorCount}}</div>
                             <div>Pending Profiles!</div>
                         </div>
                     </div>
                 </div>
-                <a href="#">
-                    <div class="panel-footer">
-                        <span class="pull-left"> <%= link_to 'View Details', profiles_path %> </span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6">
@@ -42,13 +35,6 @@
                         </div>
                     </div>
                 </div>
-                <a href="#">
-                    <div class="panel-footer">
-                        <span class="pull-left"><%= link_to 'View Details', new_food_pickup_path %></span>
-                        <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </div>
-                </a>
             </div>
         </div>
     </div>
@@ -178,7 +164,7 @@
                                             <td>{{pickup.start_time | date:'short'}}</td>
                                             <td>{{pickup.end_time | date:'short'}}</td>
                                             <td>{{pickup.location}}</td>
-                                            <td> <a href="/food_pickups/{{pickup.pickup_id}}/edit"> View </a> </td>
+                                            <td><a href="/food_pickups/{{pickup.pickup_id}}/edit" class="btn btn-primary"> View </a></td>
                                         </tr>
                                     </tbody>
                                 </table>
