--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,19 +1,53 @@
-<div id="wrapper" ng-controller='profileCtrl' ng-init='getProfiles()'>
-    <div id="page-wrapper">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="page-header">Donor Profiles</h1>
-            </div>
-            <!-- /.col-lg-12 -->
+<div ng-controller='profileCtrl' ng-init='getProfiles()'>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">Donor Profiles</h1>
         </div>
-        <!-- /.row -->
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        Donor Profiles Awaiting Approval
-                    </div>
-                    <!-- /.panel-heading -->
+        <!-- /.col-lg-12 -->
+    </div>
+    <!-- /.row -->
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    Donor Profiles Awaiting Approval
+                </div>
+                <!-- /.panel-heading -->
+                <div class="panel-body">
+                    <table width="100%" class="table table-striped table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>Profile Submitted On</th>
+                                <th>Business Name</th>
+                                <th>Donor Type</th>
+                                <th>Contact Name</th>
+                                <th>Phone</th>
+                                <th>Email</th>
+                                <th>Address</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+
+
+                        <tbody>
+                            <tr class="odd gradeX" ng-repeat='donor in unapprovedDonors'>
+                              <td>{{donor.created_at | date:'fullDate'}}</td>
+                              <td><a href="/profiles/{{donor.id}}">{{donor.business_name}}</a></td>
+                              <td>{{donor.type_of_donor}}</td>
+                              <td>{{donor.contact_name}}</td>
+                              <td>{{donor.phone_number}}</td>
+                              <td>{{donor.email}}</td>
+                              <td>{{donor.address}}</td>
+                              <td class='btn btn-warning' ng-click="toggleApprove(donor)"> {{"Pending - Click to Approve"}}</td>
+                            </tr>
+
+
+                        </tbody>
+                    </table>
+                  </div>
+                  <div class="panel-heading">
+                      Approved Donor Profiles
+                  </div>
                     <div class="panel-body">
                         <table width="100%" class="table table-striped table-bordered table-hover">
                             <thead>
@@ -28,58 +62,21 @@
                                     <th>Status</th>
                                 </tr>
                             </thead>
-
-
-                            <tbody>
-                                <tr class="odd gradeX" ng-repeat='donor in unapprovedDonors'>
-                                  <td>{{donor.created_at | date:'fullDate'}}</td>
-                                  <td><a href="/profiles/{{donor.id}}">{{donor.business_name}}</a></td>
-                                  <td>{{donor.type_of_donor}}</td>
-                                  <td>{{donor.contact_name}}</td>
-                                  <td>{{donor.phone_number}}</td>
-                                  <td>{{donor.email}}</td>
-                                  <td>{{donor.address}}</td>
-                                  <td class='btn btn-warning' ng-click="toggleApprove(donor)"> {{"Pending - Click to Approve"}}</td>
-                                </tr>
-
-
-                            </tbody>
-                        </table>
-                      </div>
-                      <div class="panel-heading">
-                          Approved Donor Profiles
-                      </div>
-                        <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Profile Submitted On</th>
-                                        <th>Business Name</th>
-                                        <th>Donor Type</th>
-                                        <th>Contact Name</th>
-                                        <th>Phone</th>
-                                        <th>Email</th>
-                                        <th>Address</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                            <tbody>
-                                <tr class="odd gradeX" ng-repeat='donor in approvedDonors'>
-                                  <td>{{donor.created_at | date:'fullDate'}}</td>
-                                  <td><a href="/profiles/{{donor.id}}">{{donor.business_name}}</a></td>
-                                  <td>{{donor.type_of_donor}}</td>
-                                  <td>{{donor.contact_name}}</td>
-                                  <td>{{donor.phone_number}}</td>
-                                  <td>{{donor.email}}</td>
-                                  <td>{{donor.address}}</td>
-                                  <td class='success'> {{"Approved"}}</td>
-                                </tr>
-
-
-                            </tbody>
-                        </table>
-                        </div>
-                      </div>
+                        <tbody>
+                            <tr class="odd gradeX" ng-repeat='donor in approvedDonors'>
+                              <td>{{donor.created_at | date:'fullDate'}}</td>
+                              <td><a href="/profiles/{{donor.id}}">{{donor.business_name}}</a></td>
+                              <td>{{donor.type_of_donor}}</td>
+                              <td>{{donor.contact_name}}</td>
+                              <td>{{donor.phone_number}}</td>
+                              <td>{{donor.email}}</td>
+                              <td>{{donor.address}}</td>
+                              <td class='success'> {{"Approved"}}</td>
+                            </tr>
+                        </tbody>
+                      </table>
                     </div>
-                    <a href="/admin">Return to Home Page</a>
-                  </div>
+              </div>
+          </div>
+          <div align="center"><%= link_to "Return to Home Page", admin_path, class: "btn btn-primary" %></div>
+      </div>
