Removed whitespace from background on certain pages

--- a/app/views/food_pickups/edit.html.erb
+++ b/app/views/food_pickups/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(@form_path, method: "patch") do %>
+<%= form_tag(@form_path, method: "patch", class: "fullPageHeight") do %>
 
 <div>
   <img src="<%= @food_pickup.picture %>" alt="Food Picture" style="width=302px;height:228px">
