--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,4 @@
+<div class='fullPageHeight'>
 <h2> Donor Account </h2>
 
 <div>
@@ -33,4 +34,5 @@
 
 <div>
   <a href="/profiles"> Back to pending approval list</a>
+</div>
 </div>
