--- a/app/assets/stylesheets/_external.css.scss
+++ b/app/assets/stylesheets/_external.css.scss
@@ -7,7 +7,7 @@ div.well{
 
 .Absolute-Center {
   margin: auto;
-  position: absolute;
+  // position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
 }
 
