--- a/app/views/food_pickups/new.html.erb
+++ b/app/views/food_pickups/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(food_pickups_path, method: "post", multipart: true) do %>
+<%= form_tag(food_pickups_path, method: "post", multipart: true, class: "fullPageHeight") do %>
 
 <div class="field">
   <%= label_tag :picture %><br />
