--- a/app/views/food_pickups/show.html.erb
+++ b/app/views/food_pickups/show.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(food_pickup_path(@food_pickup.id), method: "patch") do %>
+<%= form_tag(food_pickup_path(@food_pickup.id), method: "patch", class: "fullPageHeight") do %>
 
 <div class="field">
   <%= image_tag @food_pickup.picture %>
