--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -1,8 +1,7 @@
 
 <div class="row">
   <div class="col-lg-8">
-      <h1 class="page-header">Profile for: <%= current_donor.business_name %></h1>
-      <img src="http://www.rescuingleftovercuisine.org/assets/RLC_LOGO-900fcd5d7d719b63e43d29ac23775f74f17100194e2690e17833a091b016da85.png" alt="">
+      <h1 class="page-header"> Welcome, <%= current_donor.business_name %></h1>
   </div>
   <!-- /.col-lg-12 -->
 </div>
@@ -96,6 +95,7 @@
                                             <th>End time</th>
                                             <th>Location</th>
                                             <th>Recurrence</th>
+                                            <th>Edit Pickup?</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -108,11 +108,8 @@
                                             <td><%= pickup.end_time.strftime("%m/%e/%y %I:%M %p") %></td>
                                             <td><%= pickup.location %></td>
                                             <td><%= pickup.reoccurrence %></td>
-                                             <td>
-                                              <div class="panel-footer">
-                                                  <span class="pull-left"><%= link_to 'Edit Pick-up', food_pickup_path(pickup.id) %></span>
-                                                  <div class="clearfix"></div>
-                                              </div>
+                                            <td>
+                                              <%= link_to 'Edit Pick-up', food_pickup_path(pickup.id), class: "btn btn-default" %>
                                             </td>
                                         </tr>
                                         <% end %>
@@ -159,6 +156,8 @@
                                             <th>End time</th>
                                             <th>Location</th>
                                             <th>Recurrence</th>
+                                            <th>Cancel Recurrence</th>
+                                            <th>Reuse Pickup?</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -175,11 +174,11 @@
                                             </td>
                                             <td>
                                               <% if pickup.reoccurrence != "None" %>
-                                                <%= link_to "Cancel Recurrence", food_pickup_path(pickup.id, reoccurrence: "None"), class: "btn btn-warning", method: :patch  %>
+                                                <%= link_to "Cancel Recurrence", food_pickup_path(pickup.id, reoccurrence: "None"), class: "btn btn-danger", method: :patch  %>
                                               <% end %>
                                             </td>
 
-                                            <td><%= link_to "Reuse Pick-up", new_food_pickup_path(id: pickup.id) %></td>
+                                            <td> <%= link_to "Reuse Pick-up", new_food_pickup_path(id: pickup.id), class: "btn btn-primary" %></td>
                                         </tr>
                                         <% end %>
                                     </tbody>
