--- a/app/views/donors/index.html.erb
+++ b/app/views/donors/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-lg-8">
       <h1 class="page-header"> Welcome, <%= current_donor.business_name %></h1>
@@ -18,13 +17,6 @@
                       </div>
                   </div>
               </div>
-              <a href="#">
-                  <div class="panel-footer">
-                      <span class="pull-left">View Details</span>
-                      <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                      <div class="clearfix"></div>
-                  </div>
-              </a>
           </div>
       </div>
       <div class="col-lg-3 col-md-6">
@@ -40,36 +32,8 @@
                       </div>
                   </div>
               </div>
-              <a href="#">
-                  <div class="panel-footer">
-                      <span class="pull-left">View Details</span>
-                      <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                      <div class="clearfix"></div>
-                  </div>
-              </a>
           </div>
-      </div>
-      <div class="col-lg-3 col-md-6">
-          <div class="panel panel-red">
-              <div class="panel-heading">
-                  <div class="row">
-                      <div class="col-xs-3">
-                          <i class="fa fa-tasks fa-5x"></i>
-                      </div>
-                      <div class="col-xs-9 text-right">
-                          <div class="huge">0</div>
-                          <div>Notifications!</div>
-                      </div>
-                  </div>
-              </div>
-              <a href="#">
-                  <div class="panel-footer">
-                      <span class="pull-left">View Details</span>
-                      <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
-                      <div class="clearfix"></div>
-                  </div>
-              </a>
-          </div>
+        </div>
       </div>
     </div>
     <!-- /.row Comments, tasks, pickup requests, support tickets boxes -->
@@ -109,7 +73,7 @@
                                             <td><%= pickup.location %></td>
                                             <td><%= pickup.reoccurrence %></td>
                                             <td>
-                                              <%= link_to 'Edit Pick-up', food_pickup_path(pickup.id), class: "btn btn-default" %>
+                                              <%= link_to 'Edit Pick-up', food_pickup_path(pickup.id), class: "btn btn-primary" %>
                                             </td>
                                         </tr>
                                         <% end %>
@@ -134,7 +98,7 @@
     </div>
     <!-- /.row -->
     <!-- /.row Comments, tasks, pickup requests, support tickets boxes -->
-    <div class="row">
+    <div class="row fullPageHeight">
         <div class="col-lg-12">
             <!-- /.panel -->
             <div class="panel panel-default">
