--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -11,7 +11,7 @@ body::before {
   height: 100%;
   z-index: -1;
   background-size: 100%;
-  background: url("RLC_LOGO.png") repeat 0 50%;
+  background: image-url("RLC_LOGO.png") repeat 0 50%;
   opacity: 0.5;
 }
 
