changes to index for viewing in heroku

--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -1,3 +1,4 @@
+<div ng-app="app">
 <div ng-controller="profileCtrl">
     <div class="row">
         <div class="col-lg-12">
@@ -286,4 +287,6 @@
         <!-- /.col-lg-4 -->
     </div>
     <!-- /.row -->
+</div>
+<script type="text/javascript" src="../profile_ctrl.js"></script>
 </div>
