attempt to make profileCtrl visible in heroku

--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -288,5 +288,5 @@
     </div>
     <!-- /.row -->
 </div>
-<script type="text/javascript" src="../profile_ctrl.js"></script>
+<!-- <script type="text/javascript" src="../profile_ctrl.js"></script> -->
 </div>
