fixed div closures in admin index

--- a/app/views/donors/admin_index.html.erb
+++ b/app/views/donors/admin_index.html.erb
@@ -265,6 +265,7 @@
                           <!-- /.table-responsive -->
                       </div>
                       <!-- /.col-lg-4 (nested) -->
+                    </div>
                       <!-- /.col-lg-8 (nested) -->
                   </div> <!-- /.row -->
               </div> <!-- /.panel-body -->
