--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,5 +1,6 @@
 <div ng-controller='profileCtrl' ng-init='getProfiles()'>
-    <div class="row">
+  <script src="../profile_ctrl.js"></script>
+    <div class="row fullPageHeight">
         <div class="col-lg-12">
             <h1 class="page-header">Donor Profiles</h1>
         </div>
@@ -80,3 +81,4 @@
           </div>
           <div align="center"><%= link_to "Return to Home Page", admin_path, class: "btn btn-primary" %></div>
       </div>
+</div>
